Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -27,6 +27,7 @@
 }
 
 .truck > div {
+    display: block;
     position: absolute;
     left: 0;
     bottom: -80px;
@@ -51,6 +52,14 @@
     height: 100vh;
 }
 
+.info-panel h1,
+.info-panel h2 {
+    font-family: 'Rubik Distressed', cursive;
+    font-weight: 400;
+    text-transform: capitalize;
+    color: var(--white);
+}
+
 .headers {
     display: flex;
     flex-direction: column;
@@ -59,12 +68,8 @@
 
 .headers h1,
 .headers h2 {
-    font-family: 'Rubik Distressed', cursive;
-    font-weight: 400;
-    text-transform: capitalize;
-    color: var(--white);
     /*visibility: hidden;*/
-    /*opacity: 0;*/
+    opacity: 0;
 }
 
 .headers h1,
@@ -108,7 +113,7 @@
     cursor: pointer;
     z-index: 1;
     /*visibility: hidden;*/
-    /*opacity: 0;*/
+    opacity: 0;
 }
 
 .road-sign a {
@@ -118,14 +123,7 @@
 
 .phone {
     /*visibility: hidden;*/
-    /*opacity: 0;*/
-}
-
-.phone h2 {
-    font-family: 'Rubik Distressed', cursive;
-    font-weight: 400;
-    text-transform: capitalize;
-    color: var(--orange);
+    opacity: 0;
 }
 
 
@@ -239,7 +237,7 @@
 }
 
 @media (min-width: 320px) and (max-height: 576px) {
-    .truck {
+    .truck > div {
         display: none;
     }
     .info-panel {
